tools/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-flask
spec:
  selector:
    app: my-flask
  ports:
  - name: http
    protocol: TCP
    port: 5000
